# fast-spectral-ensemble-clustering

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark.py  benchmark_old.py  main_benchmark.py
clustering_algorithms/: __init__.py  agglomerative_clustering.py  base_clustering.py  dbscan_clustering.py  fsec_clustering.py  gmm_clustering.py  kmeans_clustering.py  spectral_clustering.py
data/: loaders.py
examples/: run_fsec.py
sandbox/: H&M_EDA.ipynb  anchor_distribution.ipynb  baseline.ipynb  fsec.ipynb  fsec_2.ipynb  fsec_clearml_integrated.ipynb  fsec_digits_visualization.ipynb  fsec_usage.ipynb  plot_linkage_comparison.ipynb
src/fast_spectral_ensemble_clustering/: __init__.py
src/fsec/: anchoring.py  autoencoder.py  clustering.py  ensemble.py  fsec_datamodule.py  fsec_module.py  plotting.py  qr_evd.py  qr_evd_mr.py  similarity.py  spectral.py  utils.py
tests/: test_fsec.py
